# parser_preprocessor

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: API_CONTRACT.md  LIMITATIONS.md  TEST_MATRIX.md
include/preprocessor/: preprocessor.h
src/: pp_buffer.c  pp_buffer.h  pp_condition_stack.c  pp_condition_stack.h  pp_core_state.c  pp_core_state.h  pp_diagnostics.c  pp_diagnostics.h  pp_expander.c  pp_expander.h  pp_macro_table.c  pp_macro_table.h  pp_text.h  preprocessor_api.c
tests/: property_tests.c  smoke_tests.c  unit_tests.c
